--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,7 @@ path = "src/bin/2024/y24d03.rs"
 [[bin]]
 name = "y24d04"
 path = "src/bin/2024/y24d04.rs"
+
+[[bin]]
+name = "y24d05"
+path = "src/bin/2024/y24d05.rs"
