added flamegraph setting

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,9 @@ name = "everybody-codes"
 version = "0.1.0"
 edition = "2021"
 
+[profile.release]
+debug = true
+
 [dependencies]
 itertools = "0.13.0"
 num-traits = "0.2.19"
