--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,3 +42,7 @@ path = "src/bin/2024/y24d07.rs"
 [[bin]]
 name = "y24d08"
 path = "src/bin/2024/y24d08.rs"
+
+[[bin]]
+name = "y24d09"
+path = "src/bin/2024/y24d09.rs"
