--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,3 +46,7 @@ path = "src/bin/2024/y24d08.rs"
 [[bin]]
 name = "y24d09"
 path = "src/bin/2024/y24d09.rs"
+
+[[bin]]
+name = "y24d10"
+path = "src/bin/2024/y24d10.rs"
