--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,3 +54,7 @@ path = "src/bin/2024/y24d10.rs"
 [[bin]]
 name = "y24d11"
 path = "src/bin/2024/y24d11.rs"
+
+[[bin]]
+name = "y24d12"
+path = "src/bin/2024/y24d12.rs"
