--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ itertools = "0.13.0"
 num-traits = "0.2.19"
 enum-ordinalize = "4.3.0"
 rayon = "1.10.0"
+indexmap = "2.6.0"
 
 [[bin]]
 name = "y24d01"
