--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ num-traits = "0.2.19"
 enum-ordinalize = "4.3.0"
 rayon = "1.10.0"
 indexmap = "2.6.0"
+lazy-regex = "3.3.0"
 
 [[bin]]
 name = "y24d01"
